force-app/main/default/objects/Provider_Payment_Summary__c/Provider_Payment_Summary__c.object-meta.xml
<CustomObject>
    <label>Provider Payment Summary</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Payment Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>