force-app/main/default/objects/Provider_Payment_Summary__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Payment Summary</relationshipLabel>
    <relationshipName>Provider_Payment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>