force-app/main/default/objects/Provider_Payment_Summary__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <formula>TEXT(Provider__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Type</label>
    <type>Text</type>
</CustomField>