force-app/main/default/objects/Provider_Payment_Summary__c/fields/Start_Date1__c.field-meta.xml
<CustomField>
    <fullName>Start_Date1__c</fullName>
    <formula>Start_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>