force-app/main/default/objects/Provider_Payment_Summary__c/fields/Start_Date_Txt__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Txt__c</fullName>
    <formula>TEXT(MONTH( Start_Date__c )) + &apos;/&apos;+ TEXT(DAY(Start_Date__c)) + &apos;/&apos; +  TEXT(YEAR(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Text</type>
</CustomField>